# openfst

./: .travis.yml  AUTHORS  BUILD.bazel  Dockerfile  Dockerfile.alpine  Dockerfile.ubuntu  Makefile.in  NEWS  README  README.md  WORKSPACE  aclocal.m4  config.h.in  configure  configure.ac
fst/: Makefile
fst/lib/: Makefile  arc.h  arcfilter.h  arcsort.h  arcsum.h  cache.h  closure.h  compat.cc  compat.h  complement.h  compose.h  concat.h  connect.h  const-fst.h  determinize.h  dfs-visit.h  difference.h  encode.h  equal.h  equivalent.h  expanded-fst.h  factor-weight.h  float-weight.h  fst-decl.h  fst.cc  fst.h  fstlib.h  heap.h  intersect.h  invert.h  map.h  minimize.h  mutable-fst.h  partition.h  product-weight.h  project.h  properties.cc  properties.h  queue.h  randgen.h  (+22 more)
fst/test/: Makefile  algo_test.cc  basic-fst.cc  basic-fst.h  dso_test.sh  fst_test.cc  pair-arc.cc  pair-arc.h  weight_test.cc
fst/test/testdata/dso/: basic.txt  pair.txt
m4/: ax_python_devel.m4
src/: Makefile.in
src/extensions/: Makefile.am  Makefile.in
src/extensions/compact/: Makefile.am  Makefile.in  compact16_acceptor-fst.cc  compact16_string-fst.cc  compact16_unweighted-fst.cc  compact16_unweighted_acceptor-fst.cc  compact16_weighted_string-fst.cc  compact64_acceptor-fst.cc  compact64_string-fst.cc  compact64_unweighted-fst.cc  compact64_unweighted_acceptor-fst.cc  compact64_weighted_string-fst.cc  compact8_acceptor-fst.cc  compact8_string-fst.cc  compact8_unweighted-fst.cc  compact8_unweighted_acceptor-fst.cc  compact8_weighted_string-fst.cc
src/extensions/compress/: Makefile.am  Makefile.in  fstcompress.cc  fstrandmod.cc
src/extensions/const/: Makefile.am  Makefile.in  const16-fst.cc  const64-fst.cc  const8-fst.cc
src/extensions/far/: Makefile.am  Makefile.in  compile-strings.cc  far-class.cc  farcompilestrings-main.cc  farcompilestrings.cc  farconvert-main.cc  farcreate-main.cc  farcreate.cc  farequal.cc  farextract-main.cc  farextract.cc  farinfo-main.cc  farinfo.cc  farisomorphic-main.cc  farisomorphic.cc  farprintstrings-main.cc  farprintstrings.cc  farscript.cc  main.cc  stlist.cc  strings.cc  sttable.cc  util.cc
src/extensions/linear/: Makefile.am  Makefile.in  fstlinear-main.cc  fstloglinearapply.cc
src/extensions/lookahead/: Makefile.am  Makefile.in  arc_lookahead-fst.cc  ilabel_lookahead-fst.cc  olabel_lookahead-fst.cc
src/extensions/mpdt/: Makefile.am  Makefile.in  mpdtcompose-main.cc  mpdtcompose.cc  mpdtexpand-main.cc  mpdtexpand.cc  mpdtinfo-main.cc  mpdtinfo.cc  mpdtreverse-main.cc  mpdtreverse.cc  mpdtscript.cc
src/extensions/ngram/: Makefile.am  Makefile.in  bitmap-index.cc
src/extensions/pdt/: Makefile.am  Makefile.in  pdtcompose-main.cc  pdtcompose.cc  pdtexpand-main.cc  pdtexpand.cc  pdtinfo-main.cc  pdtinfo.cc  pdtreplace-main.cc  pdtreplace.cc  pdtreverse-main.cc  pdtreverse.cc  pdtscript.cc  pdtshortestpath-main.cc  pdtshortestpath.cc
src/extensions/python/: Makefile.am  Makefile.in  cintegral_types.pxd  cios.pxd  cmemory.pxd  cpywrapfst.pxd  fst.pxd  fst_exceptions.cc  fst_properties.cc  pywrapfst.cc  pywrapfst.cpp  pywrapfst.pxd  pywrapfst.pyx
src/extensions/special/: Makefile.am  Makefile.in
src/include/: Makefile.am  Makefile.in
src/include/fst/: accumulator.h  add-on.h  arc-arena.h  arc-map.h  arc.h  arcfilter.h  arcmerge.h  arcsort.h  arcsum.h  bi-table.h  cache.h  closure.h  compact-fst.h  compat.h  complement.h  compose-filter.h  compose.h  concat.h  config.h  config.h.in  connect.h  const-fst.h  determinize.h  dfs-visit.h  difference.h  disambiguate.h  edit-fst.h  encode.h  epsnormalize.h  equal.h  equivalent.h  expanded-fst.h  expander-cache.h  expectation-weight.h  factor-weight.h  filter-state.h  flags.h  float-weight.h  fst-decl.h  fst.h  (+69 more)
src/include/fst/extensions/compress/: compress-script.h  compress.h  elias.h  fstgzfile.h  randmod.h
src/include/fst/extensions/far/: compile-strings.h  create.h  equal.h  extract.h  far-class.h  far.h  farlib.h  farscript.h  info.h  isomorphic.h  main.h  print-strings.h  script-impl.h  stlist.h  sttable.h  util.h
src/include/fst/extensions/linear/: linear-fst-data-builder.h  linear-fst-data.h  linear-fst.h  linearscript.h
src/include/fst/extensions/mpdt/: compose.h  expand.h  info.h  mpdt.h  mpdtscript.h  read_write_utils.h  reverse.h
src/include/fst/extensions/ngram/: ngram-fst.h  nthbit.h
src/include/fst/extensions/pdt/: collection.h  compose.h  expand.h  info.h  paren.h  pdt.h  pdtscript.h  replace.h  reverse.h  shortest-path.h
src/include/fst/extensions/special/: phi-fst.h  rho-fst.h  sigma-fst.h
src/include/fst/script/: arciterator-class.h  arcsort.h  arg-packs.h  closure.h  compile-impl.h  compile.h  compose.h  concat.h  connect.h  convert.h  decode.h  determinize.h  difference.h  disambiguate.h  draw-impl.h  draw.h  encode.h  encodemapper-class.h  epsnormalize.h  equal.h  equivalent.h  fst-class.h  fstscript.h  getters.h  info-impl.h  info.h  intersect.h  invert.h  isomorphic.h  map.h  minimize.h  print-impl.h  print.h  project.h  prune.h  push.h  randequivalent.h  randgen.h  register.h  relabel.h  (+15 more)
src/include/fst/test/: algo_test.h  compactors.h  fst_test.h  rand-fst.h  weight-tester.h
src/lib/: Makefile.am  Makefile.in  flags.cc  fst.cc  mapped-file.cc  properties.cc  symbol-table-ops.cc  symbol-table.cc  util.cc  weight.cc
src/script/: Makefile.am  Makefile.in  arcsort.cc  closure.cc  compile.cc  compose.cc  concat.cc  connect.cc  convert.cc  decode.cc  determinize.cc  difference.cc  draw.cc  encode.cc  epsnormalize.cc  equal.cc  equivalent.cc  fst-class.cc  getters.cc  info.cc  intersect.cc  invert.cc  isomorphic.cc  map.cc  minimize.cc  print.cc  project.cc  prune.cc  push.cc  randequivalent.cc  randgen.cc  relabel.cc  replace.cc  reverse.cc  reweight.cc  rmepsilon.cc  script-impl.cc  shortest-distance.cc  shortest-path.cc  synchronize.cc  (+4 more)
src/test/: Makefile.am  Makefile.in  algo_test.cc  algo_test.h  fst_test.cc  fst_test.h  rand-fst.h  weight-tester.h  weight_test.cc
